# viyr

./: CMakeLists.txt  README.md  conanfile.py
scripts/: build.sh  run.sh
src/backend/: main.cpp
src/backend/files/: example.json
